// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a currency logo with network logo 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "height": 20,
        "width": 20,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "display": "flex",
          "position": "absolute",
          "right": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 999999,
            "borderWidth": 2,
            "display": "flex",
          },
          Object {
            "borderColor": "blue",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://ethereum.org/static/655aaefb744ae2f9f818095a436d38b5/31987/eth-diamond-purple-purple.png",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "slategrey",
              "resizeMode": "cover",
            },
            Object {
              "borderRadius": 3.2,
              "height": 6.4,
              "width": 6.4,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders a currency logo without network logo 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "height": 20,
        "width": 20,
      },
    ]
  }
>
  <Image
    source={
      Array [
        Object {
          "uri": "https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png",
        },
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "slategrey",
          "resizeMode": "cover",
        },
        Object {
          "borderRadius": 8,
          "height": 16,
          "width": 16,
        },
      ]
    }
  />
</View>
`;
